src/App.scss
body {
  overflow: hidden;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media (min-width: 1400px) {
  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
      max-width: 1440px !important;
  }
}

.app-container {
  .header-container {
    .navbar {
      padding: 20px 10px;
      background: rgb(255, 255, 255);
      .navbar-nav {
        .btn-login {
          border-radius: 5px;
          margin-right: 15px;
          padding: 0 15px;
          border: 1px solid #535353;
          height: 40px;
        }
        .btn-signup {
          border-radius: 5px;
          padding: 0 15px;
          background: #303030;
          color: white;
          border: 1px solid;
          height: 40px;

          &:hover {
            background: black;
          }
        }
      }
      .nav-link{
        &.active{
          color: blue;
        }
      }
    }
  }
  .homepage-container {
    display: flex;
    .homepage-content {
      padding: 100px;
      position: relative;
      width: 50%;
      display: flex;
      flex-direction: column;
      gap: 60px;
      
      .title-1 {
        font-size: 45px;
        font-weight: 600;
      }

      .title-2 {
        font-size: 25px;
      }

      .title-3 {
        button {
          border-radius: 5px;
          padding: 0 15px;
          background: #303030;
          color: white;
          border: 1px solid;
          height: 40px;

          &:hover {
            background: black;
          }
        }
      }
    }
  }
}

